# linestring-simplifier

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
linestring_simplifier/: __init__.py  algorithms.py  core.py  exceptions.py  geometry_utils.py
tests/: __init__.py  test_core.py  test_data.json
